修复了一个bug 并添加了设置解析ip的间隔时长的配置文件

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
     "conn_args": {
         "accessKeyId": "",
-        "accessSecret": ""
+        "accessSecret": "",
+        "delay": 30
     },
     "record_args": {
         "domainName": "domain.name",
